--- a/src/style.css
+++ b/src/style.css
@@ -1,14 +1,7 @@
-/* Styling the complete Body */
-*{
-    margin: 0;
-    padding: 0;
-    border: none;
-    height: 100%;
-}
 
 /* Styling the main login page  */
 .container-main{
-    height: 100%;
+    height: 90vh;
     width: 100%;
     display: flex;
     justify-content: center;  /* Horizontal Alignment  */
@@ -20,10 +13,8 @@
     width: 80%;
     max-width: 500px;
     height: 350px;
-    display: grid;    /*  Grid is more helpful in this use case as we want this as a 2D structure */
-    grid-template-columns: 1fr 1fr;  /*  MAke 2 colums of equal length  */
-    grid-template-rows: 1fr 1fr 3fr;
-    gap: 10px;
+    display: flex;
+    flex-direction: column;
     border: 1px solid rgba(0, 0, 0, 0.03);
     border-radius: 20px;
     padding: 20px;
@@ -37,11 +28,20 @@
     0 20px 40px rgba(0, 40, 80, 0.12),
     0 4px 12px rgba(0, 40, 80, 0.08);
 }
+.choosing--buttons{
+    display: flex;
+    width: 100%;
+}
+.choosing--buttons button{
+    justify-content: space-evenly;
+    width: 40%;
+    margin: auto 20px auto 20px;
+    height: 40px;
+}
 
 #login-form{
     display: grid;
-    grid-column: 1/ 3;
-    grid-row: 3/ 6;
+    height: 200px;
 }
 
 #signup-form {
@@ -55,7 +55,6 @@
     font-weight: normal;
     text-align: center;
     align-self: center;
-    grid-column: 1/ span 2;
     font-family: sans-serif;
 }
 
@@ -70,7 +69,6 @@
 
 .block{
     width: 100%;
-    grid-column: 1/ span 2;
     align-content: center;
 }
 
@@ -82,8 +80,17 @@
     height: 80%;
 }
 
+.option.choosen{
+    background-color: #58A4B0;
+    color: white;
+}
+.signUp.choosen{
+    background-color: #58A4B0;
+    color: white; 
+}
+
 .signUp {
-    height: 80%;
+    height: 100%;
 }
 
 .container input{
@@ -131,16 +138,20 @@
 }
 
 .container h5{
-    grid-column: 1/ 3;
     align-items: flex-end;
     justify-self: flex-end;
+}
+
+.new-user{
+    height: 0px;
+    text-align: end;
 }
 
 .a-tag{
     color: #58A4B0;
     cursor: pointer;
     text-decoration: none;
-    /* color: red; */
+    color: red;
 }
 .a-tag:hover{
     color: #2D728F;
@@ -164,13 +175,17 @@
 
 } 
 
-.footer-display{
-    grid-column: 1/ span 2;
-    align-items: center;
-    
+.footer-signup{
+    margin-top: 20px;
+}
+.footer-login{
+    margin-top: 0px;
 }
 
-.footer-display input{
+.footer-signup input{
+    width: 20px;
+}
+.footer-login input{
     width: 20px;
 }
 
