--- a/src/style.css
+++ b/src/style.css
@@ -1133,7 +1133,7 @@
   height: 400px;
   width: 90%;
   max-width: 1100px;
-  border: 4px solid black;
+  /* border: 4px solid black; */
   scroll-margin-top: 80px;
   display: flex;
   font-family: "Inter", sans-serif;
@@ -1146,7 +1146,7 @@
   height: fit-content;
   width: 90%;
   max-width: 1100px;
-  border: 4px solid yellow;
+  /* border: 4px solid yellow; */
   scroll-margin-top: 80px;
   justify-self: center;
   padding: 80px 20px;
@@ -1155,9 +1155,9 @@
 
 .connectU--m .section--howItWorks {
   height: 600px;
-  width: 90%;
+  width: 95%;
   max-width: 1100px;
-  border: 4px solid Red;
+  /* border: 4px solid Red; */
   scroll-margin-top: 80px;
   justify-self: center;
 }
@@ -1236,6 +1236,9 @@
     width: 95%;
     height: fit-content;
   }
+  .connectU--m .nav--bar{
+    padding: 10px;
+  }
   .connectU--m .section--home {
     height: fit-content;
     flex-direction: column;
@@ -1245,6 +1248,9 @@
     width: 100%;
     height: 300px;
   }
+   .connectU--m .section--home .logo--section h3{
+    font-weight: lighter;
+   }
   .connectU--m .section--home .connectu--heading {
     margin-top: 25%;
   }
@@ -1303,5 +1309,83 @@
     font-size: 1.2rem;
 }
 
+.connectU--m .working--heading {
+  font-size: 1.9rem;
+  font-weight: lighter;
+  text-align: center;
+}
+
+.connectU--m .section--howItWorks .working--boxes {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 100px;
+  justify-self: center;
+}
+.connectU--m .section--howItWorks .working--boxes .working--box {
+  width: 30%;
+  height: 250px;
+  background-color: #4bbeefbc;
+  border-radius: 30px;
+  text-align: center;
+  align-items: center;
+  align-content: center;
+  padding: 7px 0px;
+}
+.connectU--m .section--howItWorks .working--boxes .working--box:hover{
+  box-shadow: 7px 7px 0px 0px rgba(167, 167, 167, 0.674);
+}
 
 
+.connectU--m .section--howItWorks .working--boxes .working--box h3{
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 1.5rem;
+}
+
+.connectU--m .section--howItWorks .working--boxes .working--box p{
+  font-size: 1.3rem;
+  color: white;
+  font-family: 'Poppins', sans-serif;
+  padding: 0px 5px;
+}
+
+@media (max-width: 768px) {
+  .connectU--m .section--howItWorks {
+    display: flex;
+    flex-wrap: wrap;
+    height: fit-content;
+    flex-direction: column; 
+  }
+  .connectU--m .section--howItWorks .working--boxes{
+    width: 100%;
+    height: fit-content;
+    justify-self: center;
+    flex-direction: column;
+    align-items: center;
+  }
+  .connectU--m .section--howItWorks .working--boxes .working--box{
+    width: 60%; 
+    margin-bottom: 25px; 
+  }
+}
+
+.connectU--m .section--footer {
+  width: 90%;
+  height: fit-content; 
+  text-align: center;
+  border: 2px solid blue; 
+  justify-self: center;
+}
+
+.connectU--m .section--footer .footer--content {
+  font-size: 1.5rem;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.connectU--m .section--footer .footer--content .navigation--btn {
+  background-color: white;
+  border: none;
+  cursor: pointer;
+  padding: 10px;
+  margin: 0px auto auto auto;
+}
