--- a/src/style.css
+++ b/src/style.css
@@ -1111,14 +1111,18 @@
   margin: 10px 0px;
 }
 
-.connectU--m .Home--btn {
+.connectU--m .btn--howItWorks {
   align-self: center;
+  margin-left: 20px;
   margin-right: 20px;
-  text-decoration: none;
+  border: none;
   color: #111827;
+  cursor: pointer;
+  background-color: white;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
-.connectU--m .btn--howItWorks {
+
+.connectU--m .btn--home {
   align-self: center;
   margin-left: 20px;
   margin-right: 20px;
@@ -1236,7 +1240,7 @@
     width: 95%;
     height: fit-content;
   }
-  .connectU--m .nav--bar{
+  .connectU--m .nav--bar {
     padding: 10px;
   }
   .connectU--m .section--home {
@@ -1248,9 +1252,9 @@
     width: 100%;
     height: 300px;
   }
-   .connectU--m .section--home .logo--section h3{
+  .connectU--m .section--home .logo--section h3 {
     font-weight: lighter;
-   }
+  }
   .connectU--m .section--home .connectu--heading {
     margin-top: 25%;
   }
@@ -1273,7 +1277,7 @@
 .connectU--m .web--description .intro--text {
   font-size: 2rem;
   margin-bottom: 10px;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 .connectU--m .web--description .typing--line {
   font-size: 3rem;
@@ -1290,23 +1294,31 @@
 }
 
 @keyframes Wave {
-    0% { background-position: 0% 50%;}
-    50% { background-position: 100% 50%;}
-    100% { background-position: 0% 50%;}
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 .connectU--m .web--description .desc--para {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
-.connectU--m .web--description .desc--para strong{
-    color: #6a11cb;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+.connectU--m .web--description .desc--para strong {
+  color: #6a11cb;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
 .connectU--m .web--description .conclusion {
-    font-family: 'Inter', sans-serif;
-    font-size: 700;
-    font-size: 1.2rem;
+  font-family: "Inter", sans-serif;
+  font-size: 700;
+  font-size: 1.2rem;
 }
 
 .connectU--m .working--heading {
@@ -1332,20 +1344,20 @@
   align-content: center;
   padding: 7px 0px;
 }
-.connectU--m .section--howItWorks .working--boxes .working--box:hover{
+.connectU--m .section--howItWorks .working--boxes .working--box:hover {
   box-shadow: 7px 7px 0px 0px rgba(167, 167, 167, 0.674);
 }
 
-
-.connectU--m .section--howItWorks .working--boxes .working--box h3{
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+.connectU--m .section--howItWorks .working--boxes .working--box h3 {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 1.5rem;
 }
 
-.connectU--m .section--howItWorks .working--boxes .working--box p{
+.connectU--m .section--howItWorks .working--boxes .working--box p {
   font-size: 1.3rem;
   color: white;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   padding: 0px 5px;
 }
 
@@ -1354,31 +1366,31 @@
     display: flex;
     flex-wrap: wrap;
     height: fit-content;
-    flex-direction: column; 
+    flex-direction: column;
   }
-  .connectU--m .section--howItWorks .working--boxes{
+  .connectU--m .section--howItWorks .working--boxes {
     width: 100%;
     height: fit-content;
     justify-self: center;
     flex-direction: column;
     align-items: center;
   }
-  .connectU--m .section--howItWorks .working--boxes .working--box{
-    width: 60%; 
-    margin-bottom: 25px; 
+  .connectU--m .section--howItWorks .working--boxes .working--box {
+    width: 60%;
+    margin-bottom: 25px;
   }
 }
 
 .connectU--m .section--footer {
   width: 90%;
-  height: fit-content; 
+  height: fit-content;
   text-align: center;
   justify-self: center;
 }
 
 .connectU--m .section--footer .footer--content {
   font-size: 1.5rem;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
 .connectU--m .section--footer .footer--content .navigation--btn {
@@ -1395,19 +1407,19 @@
 
 .mainpage--mp {
   width: 100%;
-  max-width: 1300px;
+  /* max-width: 1300px; */
   height: fit-content;
   justify-self: center;
 }
 
-.mainpage--mp .header--navbar{
+.mainpage--mp .header--navbar {
   width: 90%;
   height: fit-content;
   justify-self: center;
   display: flex;
 }
 
-.mainpage--mp .header--navbar .mainlogo{
+.mainpage--mp .header--navbar .mainlogo {
   width: 12%;
   border-radius: 50%;
   margin-left: 5px;
@@ -1417,17 +1429,17 @@
 .mainpage--mp .header--navbar .logo--heading {
   font-size: 1.2rem;
   font-weight: bold;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   margin-bottom: 0px;
 }
 .mainpage--mp .header--navbar .logo--desc {
   margin-left: 10px;
 }
-.mainpage--mp .header--navbar .logo--desc p{
-  font-family: 'Inter', sans-serif;
+.mainpage--mp .header--navbar .logo--desc p {
+  font-family: "Inter", sans-serif;
 }
 
-.mainpage--mp .header--navbar .notification--navbar{
+.mainpage--mp .header--navbar .notification--navbar {
   width: 25%;
   height: fit-content;
   align-self: center;
@@ -1439,14 +1451,14 @@
   border-radius: 20px;
 }
 
-.mainpage--mp .search--teams{
+.mainpage--mp .search--teams {
   width: 100%;
   height: fit-content;
   display: flex;
   justify-content: end;
 }
 
-.mainpage--mp .search--teams .search--tab{
+.mainpage--mp .search--teams .search--tab {
   width: 75%;
   height: 40px;
   border-radius: 15px;
@@ -1458,9 +1470,10 @@
 
 .mainpage--mp .browsing--section {
   width: 100%;
-  height: 600px;
+  height: fit-content;
   margin-top: 20px;
-  border: 2px solid yellowgreen;
+  margin-bottom: 0px;
+  /* background-color: rgb(198, 251, 198); */
 }
 
 .mainpage--mp .browsing--section .browsing--options {
@@ -1468,13 +1481,392 @@
   width: 90%;
   justify-self: center;
 }
-.mainpage--mp .browsing--section .browsing--options .browse--op{
-  margin: 20px auto;
+.mainpage--mp .browsing--section .browsing--options .browse--op {
+  margin: 20px auto 20px auto;
   width: 25%;
   height: 30px;
   border-radius: 20px;
   border: none;
   font-size: 1.1rem;
   font-weight: 600;
-  font-family:'Times New Roman', Times, serif;
+  font-family: "Times New Roman", Times, serif;
+  background-color: rgb(160, 135, 184);
+  cursor: pointer;
 }
+
+.mainpage--mp .browsing--section .browsing--options .browse--clicked {
+  color: black;
+  background-color: rgb(248, 223, 188);
+}
+
+.mainpage--mp .events--section {
+  margin: 0px;
+  padding: 10px;
+  width: 100%;
+  height: fit-content;
+  /* border: 2px solid red; */
+  justify-self: center;
+  background: linear-gradient(rgb(198, 251, 198), rgb(219, 147, 252));
+}
+
+.mainpage--mp .events--section .event--heading {
+  margin-left: 7px;
+  font-family: "Poppins", sans-serif;
+}
+
+.mainpage--mp .events--section .event--desc {
+  margin-left: 10px;
+  font-family: "Inter", sans-serif;
+}
+.mainpage--mp .events--section .event--cards--section {
+  width: 90%;
+  height: fit-content;
+  /* border: 3px solid blueviolet; */
+  display: flex;
+  justify-self: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+.mainpage--mp .events--section .events--card {
+  width: 30%;
+  height: fit-content;
+  margin: 10px;
+  padding: 30px 5px;
+  border: 1px solid black;
+  border-radius: 15px;
+}
+
+.mainpage--mp .events--section .events--card .event--idea {
+  height: 50%;
+  width: 100%;
+}
+
+.mainpage--mp .events--section .events--card .card--img {
+  width: 100%;
+  height: 40%;
+}
+
+.mainpage--mp .events--section .events--card .event--idea .card--desc {
+  margin-bottom: 15px;
+}
+
+.mainpage--mp .events--section .events--card .event--idea h4 {
+  margin: 5px;
+}
+
+@media (max-width: 1150px) {
+  .mainpage--mp .events--section .events--card {
+    width: 40%;
+  }
+}
+
+@media (max-width: 900px) {
+  .mainpage--mp .events--section .event--cards--section {
+    width: 100%;
+  }
+  .mainpage--mp .events--section .events--card {
+    width: 42%;
+  }
+}
+
+@media (max-width: 730px) {
+  .mainpage--mp .events--section .events--card {
+    width: 70%;
+  }
+}
+
+.mainpage--mp .teams--section {
+  margin: 0px;
+  padding: 10px;
+  width: 100%;
+  height: fit-content;
+  justify-self: center;
+  background: linear-gradient(rgb(198, 251, 198), rgb(219, 147, 252));
+}
+.mainpage--mp .teams--section .event--heading {
+  margin-left: 7px;
+  font-family: "Poppins", sans-serif;
+}
+
+.mainpage--mp .teams--section .event--desc {
+  margin-left: 10px;
+  font-family: "Inter", sans-serif;
+}
+
+.mainpage--mp .teams--section .team--card--section {
+  width: 90%;
+  height: fit-content;
+  /* border: 3px solid blueviolet; */
+  display: flex;
+  justify-self: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+.mainpage--mp .teams--section .choosing--team--type {
+  display: flex;
+  width: 100%;
+}
+
+.mainpage--mp .teams--section .choosing--team--type .team--formation {
+  display: flex;
+  flex-direction: column;
+  margin-left: auto;
+  width: 50%;
+  align-items: center;
+}
+
+.mainpage--mp
+  .teams--section
+  .choosing--team--type
+  .team--formation
+  .team--create {
+  padding: 10px 15px;
+  margin: 0px 20px;
+  width: 50%;
+  max-width: 250px;
+  border-radius: 30px;
+  background-color: #111827;
+  color: white;
+  cursor: pointer;
+}
+
+.mainpage--mp .teams--section .choosing--team--type .team--browse {
+  display: flex;
+  flex-direction: column;
+  margin-right: auto;
+  width: 50%;
+  align-items: center;
+}
+
+.mainpage--mp
+  .teams--section
+  .choosing--team--type
+  .team--browse
+  .team--option {
+  padding: 10px 15px;
+  margin: 0px 20px;
+  height: fit-content;
+  width: 50%;
+  max-width: 250px;
+  border-radius: 30px;
+  background-color: #111827;
+  color: white;
+  cursor: pointer;
+}
+
+.mainpage--mp
+  .teams--section
+  .choosing--team--type
+  .team--browse
+  .browseteam--desc {
+  font-family: "Inter", sans-serif;
+  font-size: 1rem;
+  font-weight: lighter;
+}
+
+.mainpage--mp
+  .teams--section
+  .choosing--team--type
+  .team--formation
+  .createTeam--desc {
+  font-family: "Inter", sans-serif;
+  font-size: 1rem;
+  font-weight: lighter;
+}
+
+.mainpage--mp .teams--section .create--block {
+  width: 80%;
+  height: 600px;
+  justify-self: center;
+  text-align: center;
+}
+
+.mainpage--mp .teams--section .create--block .teamName {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.mainpage--mp .teams--section .create--block .teamName .input--teamname {
+  width: 40%;
+  height: 40px;
+  text-indent: 10px;
+  border-radius: 20px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+.mainpage--mp .teams--section .create--block .eventName {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.mainpage--mp .teams--section .create--block .eventName .input--eventname {
+  width: 40%;
+  height: 40px;
+  text-indent: 10px;
+  border-radius: 20px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+.mainpage--mp .teams--section .create--block .create--heading {
+  font-family: "Poppins", sans-serif;
+}
+
+.mainpage--mp .teams--section .create--block .teamDescription {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.mainpage--mp .teams--section .create--block .teamDescription .input--desc {
+  width: 40%;
+  height: 40px;
+  text-indent: 10px;
+  border-radius: 20px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+.mainpage--mp .teams--section .create--block .teamSize {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.mainpage--mp .teams--section .create--block .teamSize .input--teamSize {
+  width: 40%;
+  height: 40px;
+  text-indent: 10px;
+  border-radius: 17px;
+  border: 2px solid black;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+.mainpage--mp .teams--section .create--block .teamSkills {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.mainpage--mp .teams--section .create--block .teamSkills .input--skills {
+  width: 40%;
+  height: 40px;
+  text-indent: 10px;
+  border-radius: 20px;
+  margin-right: 20px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+.mainpage--mp .teams--section .create--block .teamSkills .add--skill {
+  border: none;
+  color: white;
+  width: 15%;
+  height: fit-content;
+  padding-bottom: 8px;
+  background: linear-gradient(rgba(63, 63, 216, 0.673));
+  border-radius: 15px;
+  font-size: medium;
+  cursor: pointer;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+.mainpage--mp .teams--section .create--block .teamSkills .add--skill::before {
+  content: "+";
+  font-size: 22px;
+  font-weight: bold;
+  margin-right: 6px;
+  vertical-align: end;
+}
+
+.mainpage--mp .teams--section .create--block .skills--choosen {
+  width: 75%;
+  max-width: 500px;
+  height: fit-content;
+  display: flex;
+  flex-wrap: wrap;
+  justify-self: center;
+  margin: 15px auto;
+}
+
+.mainpage--mp .teams--section .create--block .skills--choosen .added--skills {
+  height: fit-content;
+  width: fit-content;
+  border: 2px solid #2d728f;
+  border-radius: 20px;
+  padding: 4px;
+  cursor: pointer;
+  background-color: blueviolet;
+  color: white;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+}
+
+.mainpage--mp .teams--section .create--block .teamLeader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.mainpage--mp .teams--section .create--block .teamLeader .input--leader {
+  width: 40%;
+  height: 40px;
+  text-indent: 10px;
+  border-radius: 20px;
+  margin-right: 20px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+.mainpage--mp .teams--section .create--block .team--submission {
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.mainpage--mp .teams--section .create--block .team--submission .team--submit {
+  width: 25%;
+  max-width: 200px;
+  height: 40px;
+  border-radius: 15px;
+  margin-top: 20px;
+  border: none;
+  background: linear-gradient(orange, greenyellow);
+  font-size: 1.1rem;
+  cursor: pointer;
+}
+
+.mainpage--mp .teams--section .browse--block {
+  height: fit-content;
+  padding: 20px;
+  border: 2px solid crimson;
+}
+
+.mainpage--mp .teams--section .browse--block .main--heading {
+  font-family: 'Poppins', sans-serif;
+  font-weight: lighter;
+}
+.mainpage--mp .teams--section .browse--block .empty--desc{
+  font-family: 'Inter', sans-serif;
+  font-weight: lighter;
+}
+.mainpage--mp .teams--section .browse--block .open--browsing{
+  font-family: 'Courier New', Courier, monospace;
+  font-size: large;
+  display: flex;
+}
+
+.mainpage--mp .teams--section .browse--block .card--section {
+  display: flex;
+  height: fit-content;
+  margin: 15px;
+}
+
+.mainpage--mp .teams--section .browse--block .team--card {
+  width: 30%;
+  height: 300px;
+  border: 3px solid blue;
+  padding: 5px 10px;
+  margin: auto 10px;
+}
+
+
+
