--- a/src/style.css
+++ b/src/style.css
@@ -1577,14 +1577,12 @@
 }
 
 .mainpage--mp .events--section .filter--section {
-  display: flex;
-  flex-direction: column;
-  justify-self: end;
-  width: fit-content;
+  width: 90%;
   height: fit-content;
-  border: 2px solid blueviolet;
-  border-radius: 10px;
-  padding: 5px;
+  justify-self: center;
+  padding: 8px 12px;
+  border-radius: 20px;
+  background-color: rgb(255, 188, 210);
 }
 
 .mainpage--mp .events--section .filter--area {
@@ -1764,7 +1762,12 @@
 .mainpage--mp .teams--section .filtered--event {
   display: flex;
   align-items: center;
+  width: 90%;
+  height: fit-content;
   justify-self: center;
+  padding: 8px 12px;
+  border-radius: 20px;
+  background-color: rgb(255, 188, 210);
 }
 
 .mainpage--mp .teams--section .filtered--event h2 {
@@ -2515,6 +2518,8 @@
   }
 }
 
+/* -------- Edit Profile styling ------------ */
+
 .mainpage--mp .edit--profile--backdrop {
   position: fixed;
   inset: 0;
@@ -2530,10 +2535,12 @@
   width: 90%;
   max-width: 500px;
   background: #fff;
+  max-height: 85vh;
+  overflow-y: auto;
   padding: 25px;
-  border-radius: 14px;
   position: relative;
   animation: pop 0.3s ease;
+  height: fit-content;
 }
 
 @keyframes pop {
@@ -2558,6 +2565,10 @@
   border-radius: 10px;
 }
 
+.mainpage--mp .edit--profile--modal p{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 .mainpage--mp .edit--profile--modal select{
   width: 90%;
   margin: 3px 0;
@@ -2573,5 +2584,72 @@
   color: white;
   border: none;
   border-radius: 8px;
+  cursor: pointer;
+}
+
+.mainpage--mp .edit--profile--modal .edit--skill--arena {
+  height: fit-content;
+  width: 90%;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 4px;
+  padding: 4px;
+  font-size: small;
+  font-family: 'Inter', sans-serif;
+}
+.mainpage--mp .edit--profile--modal .edit--skill--arena .edit--skill--box {
+  height: fit-content;
+  width: fit-content;
+  padding: 4px;
+  margin: 4px 3px;
+  color: white;
+  background-color: #5c8ffe;
+  border-radius: 6px;
+}
+
+.mainpage--mp .edit--profile--modal .edit--interest--arena{
+  height: fit-content;
+  width: fit-content;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 4px;
+  padding: 4px;
+  font-size: small;
+  font-family: 'Inter', sans-serif;
+}
+.mainpage--mp .edit--profile--modal .select--projectInterest .edit--project--box {
+  height: fit-content;
+  width: fit-content;
+  padding: 4px;
+  margin: 4px 3px;
+  color: white;
+  background-color: #5c8ffe;
+  border-radius: 6px;
+}
+.mainpage--mp .edit--profile--modal .select--generalInterest .edit--general--interest {
+  height: fit-content;
+  width: fit-content;
+  padding: 4px;
+  margin: 4px 3px;
+  color: white;
+  background-color: #5c8ffe;
+  border-radius: 6px;
+}
+
+.mainpage--mp .edit--profile--modal .select--avail {
+  height: fit-content;
+  width: fit-content;
+  display: flex;
+  flex-direction: column;
+}
+.mainpage--mp .edit--profile--modal .select--avail label {
+  padding: 5px;
+  display: flex;
+}
+.mainpage--mp .edit--profile--modal .select--avail label input{
+  margin: 0px;
+  margin-left: 0px;
+  margin-right: auto;
+  justify-self: start;
 }
 
